[package]
name = "marginfi"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "marginfi"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
test-bpf = ["test", "debug"]
test = []
client = []
devnet = []
mainnet-beta = []
debug = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = "0.29.0"
solana-program = "1.18.10"

pyth-sdk-solana = "0.9.0"
switchboard-v2 = "0.1.19"

bytemuck = "1.9.1"
cfg-if = "1.0.0"
enum_dispatch = "0.3.11"
fixed = "1.12.0"
fixed-macro = "1.2.0"
lazy_static = "1.4.0"
static_assertions = "1.1.0"
type-layout = "0.2.0"
solana-security-txt = "1.1.1"

[dev-dependencies]
solana-account-decoder = "1.16.23"
solana-cli-output = "1.16.23"
solana-program-test = "1.16.23"
solana-logger = "1.16.23"
solana-sdk = "1.16.23"

anyhow = "1.0.66"
assert_matches = "1.5.0"
base64 = "0.21.0"
bincode = "1.3.3"
# fixtures = { path = "../test-utils", package = "test-utilities" }
futures = "0.3.25"
pretty_assertions = "1.2.1"
rust_decimal = "*"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.115"
