[package]
name = "meteora"
version = "0.5.0"
description = "Created with Anchor"
edition = "2021"
license = "MIT"
readme = "README.md"

[lib]
crate-type = ["cdylib", "lib"]
name = "meteora"
# licence = "MIT"
# version = "0.0.1"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []
test-bpf = []
devnet = []
staging = []
no-capture = []

[dependencies]
serde = { version = "1.0.136" }
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"