[package]
name = "meteora"
version = "0.5.0"
description = "Created with Anchor"
edition = "2021"
license = "MIT"
readme = "README.md"

[lib]
crate-type = ["cdylib", "lib"]
name = "meteora"
# licence = "MIT"
# version = "0.0.1"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []
test-bpf = []
devnet = []
staging = []
no-capture = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = "0.29.0"
serde = "1.0.136"
solana-program = "1.18.10"
# serde = { workspace = true }
# anchor-lang = { workspace = true, features = ["init-if-needed"]}
# anchor-spl = { workspace = true }

