[package]
name = "saturn-v1"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "saturn_v_1"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = "0.29.0"
serde = "1.0.136"
solana-program = "1.18.10"
# anchor-lang = { workspace = true, features = ["init-if-needed"] }
# anchor-spl = { workspace = true }
pyth-solana-receiver-sdk = "0.1.0"
blake3 = "1.5.1"
bytemuck = "1.15.0"
constant_time_eq = "0.3.0"
# solana-program = { workspace = true }
toml_datetime = "0.6.5"
winnow = "0.6.5"
spl-token = { version="3.5.0", features = [ "no-entrypoint"]}
# serde = { workspace = true }
meteora = {path = "../meteora", features = ["cpi"]}
kamino_lending = {path = "../klend", features=["cpi", "no-entrypoint"]}
# marginfi = {git ="https://github.com/0xbear9999/marginfi-v2", features=["cpi","devnet", "no-entrypoint"]}



