[package]
name = "saturn-v1"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "saturn_v_1"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.29.0" }
anchor-spl = "0.29.0"
serde = "1.0.136"
solana-program = "1.18.10"

# anchor-lang = { workspace = true }
# anchor-spl = { workspace = true }
# solana-program = { workspace = true }
# serde = { workspace = true }

spl-token = { version="3.5.0", features = [ "no-entrypoint"]}
pyth-solana-receiver-sdk = "0.1.0"
blake3 = "1.5.1"
bytemuck = "1.15.0"
constant_time_eq = "0.3.0"
fixed = "1.12.0"
fixed-macro = "1.2.0"

toml_datetime = "0.6.5"
winnow = "0.6.5"

dynamic-amm = {path = "../dynamic-amm", features = ["cpi"]}
kamino_lending = {path = "../klend", features=["cpi", "no-entrypoint"]}
marginfi = {path ="../marginfi-v2", features=["cpi","devnet", "no-entrypoint"]}




