[package]
name = "test-utilities"
version = "0.1.0"
publish = false
edition = "2021"

[features]
lip = ["liquidity-incentive-program"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = "0.29.0"
solana-program = "1.18.10"

solana-logger = "1.16.23"
solana-program-test = "1.16.23"
solana-sdk = "1.16.23"

pyth-sdk-solana = "0.9.0"
switchboard-v2 = "0.1.19"

bytemuck = "1.9.1"
fixed = "1.12.0"
fixed-macro = "1.2.0"
lazy_static = "1.4.0"
static_assertions = "1.1.0"
type-layout = "0.2.0"
anyhow = "1.0.66"
assert_matches = "1.5.0"
bincode = "1.3.3"
futures = "0.3.25"
pretty_assertions = "1.2.1"

[dependencies.marginfi]
path = "../marginfi"

[dependencies.liquidity-incentive-program]
path = "../liquidity-incentive-program"
optional = true
